--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GOIT-JS-HW-07</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css\common.css">
 </head>
 <body>
   <h1>JavaScript Homework - GOIT-JS-HW-07</h1>
